Bug 1737489 - Application specific backout of bug 1691171, only for MOZ_THUNDERBIRD. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D129503